--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,5 +1,4 @@
 
 
   <h1>Modifica il seguente bottone con i campi quà sorpa</h1>
-<button [(ngModel)]="button" class="{{button.class}}" type="{{button.type}}" name="{{button.name}}">{{button.label}}</button>
-
+  <button class="{{button.class}}" type="{{button.type}}" name="{{button.name}}">{{button.label}}</button>
