--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,5 +1,5 @@
 
 
   <h1>Modifica il seguente bottone con i campi quà sorpa</h1>
-  <button class="{{button.class}}" type="{{button.type}}" name="{{button.name}}" >{{button.label}}<a href="{{button.href}}"></a></button>
+  <button style="margin-top: 20px" class="{{button.class}}" type="{{button.type}}" name="{{button.name}}" >{{button.label}}<a href="{{button.href}}"></a></button>
 
