--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -14,5 +14,5 @@
       <tr>
         <td>Href<input type="text" #href class="form-control"></td>
       </tr>
-      <button type="button" (click)="buttonProperties(type.value, name.value, label.value, styleClass.value, href.value)">Salva</button>
+      <button style="margin-top: 10px" type="button" (click)="buttonProperties(type.value, name.value, label.value, styleClass.value, href.value)">Salva</button>
     </table>
