--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 </div>
 <div align="center" class="container" style="margin-bottom: 30px">
   <div style="margin-top: 30px">
-    <app-user-table [users]="users"></app-user-table>
+    <app-user-table [data]="users" [headers]="header"></app-user-table>
   </div>
 </div>
 
