--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,7 +1,7 @@
 <table align="center" border="1" cellpadding="5">
 <!--  Stampa header -->
   <tr>
-    <th *ngFor="let header of headers">
+    <th class="th-" *ngFor="let header of headers">
     {{header.value}}</th>
   </tr>
 <!--  Stampa users tramite array ricevto in input-->
